fix: table ui on mobile

--- a/style.css
+++ b/style.css
@@ -755,6 +755,10 @@ main .event-history .event-history-table {
       border-left: 1px solid var(--clr-accent);
     }
 
+    & .td-arrow-button {
+      display: none;
+    }
+
     &::-webkit-scrollbar {
       width: 3px;
     }
@@ -998,6 +1002,7 @@ main .event-history .event-history-table-ftr {
         color: var(--clr-primary);
         min-width: 2rem;
         min-height: 2rem;
+        border-radius: 50%;
       }
 
       & .table-page[aria-current="true"] {
@@ -1264,9 +1269,77 @@ main .event-history .event-history-table-ftr {
       }
     }
 
+    & thead tr {
+      min-height: max-content;
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      grid-template-rows: 2rem;
+      padding-block: 0.2rem;
+
+      & td:nth-child(1) {
+        grid-area: 1/1/1/1;
+      }
+      & td:nth-child(2) {
+        grid-area: 2/2/2/-1;
+        text-align: right;
+      }
+
+      & td:nth-child(3) {
+        grid-area: 2/1/2/1;
+      }
+      & td:nth-child(4) {
+        grid-area: 1/2/1/-1;
+        justify-self: flex-end;
+      }
+      }
     & tbody tr {
       font-size: 0.8rem;
       min-height: max-content;
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      grid-template-rows: repeat(2, 2.2rem);
+      padding-block: 0.2rem;
+
+      & td:nth-child(1) {
+        grid-area: 1/1/1/1;
+        display: flex;
+        align-items: center;
+        gap: 0.4rem;
+
+        & .td-arrow-button {
+          display: none;
+          /*width: 1.2rem;*/
+          /*height: 1.2rem;*/
+          /*align-items: center;*/
+          /*justify-content: center;*/
+          /*background-color: unset;*/
+          /*background-image: url("/public/arrow.svg");*/
+          /*background-position: center;*/
+          /*background-repeat: no-repeat;*/
+          /*border: none;*/
+          /*margin: 0;*/
+          /*border-radius: 50%;*/
+
+          /*&:hover {*/
+          /*  background-color: var(--bg-accent);*/
+          /*}*/
+        }
+      }
+
+      & td:nth-child(2) {
+        grid-area: 2/2/2/-1;
+        text-align: right;
+      }
+
+      & td:nth-child(3) {
+        grid-area: 2/1/2/1;
+      }
+      & td:nth-child(4) {
+        grid-area: 1/2/1/-1;
+        justify-self: flex-end;
+      }
+
+
     }
   }
 
